--- a/styles/game.css
+++ b/styles/game.css
@@ -1,1 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;1,400&family=Work+Sans:wght@400;500;600;700;800&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Work Sans', sans-serif;
+    margin: 0;
+
+}
+
+nav {
+    padding: 10px o;
+}
+
+.nav-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+
+
+}
+
+.logo-container {
+    width: 50%;
+    display: flex;
+    font-size: 25px;
+
+}
+
+.nav-items-container {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.logo-container img {
+    height: 40px;
+    width: 86px;
+    margin-top: 44px;
+}
+
+.logo-container p {
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.nav-items-container a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.text-color {
+    color: magenta;
+
+}
+
+.nav-btn {
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    width: 262px;
+    height: 56px;
+    text-align: center;
+    padding-top: 15px;
+    
+}
