--- a/styles/game.css
+++ b/styles/game.css
@@ -32,16 +32,22 @@ header {
 }
 
 .logo-container {
-    width: 50%;
+    width: 100%;
     display: flex;
     font-size: 25px;
+}
 
+.logo-container p {
+    font-size: 45px;
+    font-weight: 700;
 }
 
 .nav-items-container {
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
+    max-width: 8oopx;
+    margin: 0 auto;
 
 }
 
@@ -64,7 +70,8 @@ header {
 }
 
 .text-color {
-    color: magenta;
+    color: #FF42A5;
+
 
 }
 
@@ -85,6 +92,26 @@ header {
     margin: 0 auto;
     max-width: 1440px;
 
+}
+
+.banner-text {
+    color: #0B0223;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase;
+
+}
+
+.banner-description {
+    text-align: center;
+    font-size: 95px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .banner-content {
@@ -176,8 +203,44 @@ footer {
     height: 636px;
     margin: 0 auto;
 }
+
 .fa-brands {
+    text-align: center;
+}
+
+.footer-section {
+    text-align: center;
+    color: #FFF;
+    padding-top: 40px;
+}
+
+.footer-section p {
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.footer-section img {
+    width: 86px;
+    height: 40px;
+}
+
+.footer-section li {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    gap: 10px;
+}
+
+.footer-logo {
+    display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+.social-accounts .fa-brands {
+    width: 40px;
+    height: 40px;
+    padding: 10px;
 }
 
 @media screen and (max-width:576px) {
