--- a/styles/game.css
+++ b/styles/game.css
@@ -99,8 +99,6 @@ header {
     align-items: center;
     margin: 0 auto;
     max-width: 1440px;
-
-
 }
 
 .banner-text {
@@ -158,12 +156,12 @@ header {
     background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
 }
 
-.gamer-content {}
+.gamer-content {
+    width: 50%;
+}
 
 .gamer-img {
-    width: 868px;
-    height: 489px;
-
+    width: 60%
 }
 
 .gamer-content-text {
@@ -178,7 +176,6 @@ header {
 }
 
 .gamer-content-description {
-    width: 520px;
     color: #534C64;
     font-size: 18px;
     font-weight: 400;
@@ -186,11 +183,17 @@ header {
 
 }
 
+.gamer {
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+
+}
+
 .gamer-container {
     display: flex;
-    justify-content: space-evenly;
-    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    justify-content: space-between;
     align-items: center;
+    max-width: 1440px;
+    margin: 0 auto;
 
 }
 
@@ -207,8 +210,28 @@ header {
     background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
 }
 
+.text-gray-1 {
+    color: #534C64;
+    text-align: left;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 45px;
+    margin-bottom: 10px;
+}
+
+.text-gray-2 {
+    color: #534C64;
+    font-family: Work Sans;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 45px;
+    margin-bottom: 96px;
+}
+
 funny-banner {
-    max-width: 1440px;
+    background-color: #FFF;
     margin: 0 auto;
     align-items: center;
 }
@@ -246,7 +269,8 @@ funny-banner {
     justify-content: space-evenly;
     align-items: center;
     margin: 0 auto;
-
+    width: 60%;
+    margin-top: 30px;
 }
 
 .funny-cards-container .funny-cards {
@@ -258,15 +282,29 @@ funny-banner {
     gap: 10px;
 }
 
+.play-banner {
+    width: 50%;
+    align-items: center;
+    text-align: center;
+}
+
+.play-banner-img img {}
+
 .play-banner-container {
     display: flex;
     justify-content: center;
     margin-top: 200px;
+    background-color: #FFF;
+    padding: 50px;
+
+}
+
+.text-gray {
+    text-align: center;
 }
 
 .play-banner h3 {
     text-align: right;
-    font-family: Work Sans;
     font-size: 48px;
     text-align: center;
     font-weight: 700;
@@ -288,11 +326,13 @@ funny-banner {
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
     margin: 0 auto;
 }
-
-.careers-banner {
-    max-width: 1920px;
-    height: 821px;
+.careers{
     background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+
+}
+.careers-banner {
+    max-width: 1440px;
+    height: 821px;
     display: flex;
     margin: 0 auto;
     justify-content: space-around;
@@ -354,17 +394,38 @@ funny-banner {
     border-radius: 50px;
     background: #FFF;
     color: #0B0223;
-    font-size: 20px;
-    text-align: center;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: 600;
 }
 
-.gaming-section-container {
-    width: 1920px;
-    height: 427px;
-    flex-shrink: 0;
+.game-part-2 {
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    margin: 0 auto;
+    padding: 40px 0;
+    gap: 40px;
 
+}
+.gaming-section-container{
+    max-width: 1440px;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.gaming-section-1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.gaming-section-2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 40px;
+    margin-top: 50px;
 }
 
 
@@ -372,8 +433,7 @@ funny-banner {
 
 footer {
     background: #0B0223;
-    width: 1920px;
-    height: 636px;
+    width: 100% height: 636px;
     margin: 0 auto;
 }
 
@@ -418,7 +478,14 @@ footer {
 
 @media screen and (max-width:576px) {
     .nav-container {
-        flex-direction: column
+        flex-direction: column;
+    }
+
+    .logo-container,
+    .careers-banner,
+    .gamer-container,
+    .funny-cards-container {
+        flex-direction: column;
     }
 
     .nav-items-container {
